# am-new-audit-crew

./: .env  .gitignore  .~lock.DG-Mistral-DeepSeeker.odt#  Basel - Mistral.odt  BaselAndDG_Mistral.odt  ICAAP.odt  Mistral.odt  pyproject.toml  report.md  report__.md  requirements.txt
pre_audit_crew/: Pre_Audit_Report.md  README.md  blocked_websites.pkl  llm_errors.pkl  output-28-Jan-25.odt  pyproject.toml  report.md
pre_audit_crew/search_results/: PRCT.md  global_regulations.md  output-16-feb.odt  qa_verification.md  risk_analysis.md  standards.md  sub_processes.md  uae_regulations.md
pre_audit_crew/search_results (copy)/: PRCT.md  Pre_Audit_Report.md  global_regulations.md  risk_analysis.md  standards.md  sub_processes.md  uae_regulations.md
pre_audit_crew/src/pre_audit_crew/: crew.py  main.py  report.md
pre_audit_crew/src/pre_audit_crew/Output/: DG-Mistral-DeepSeeker.odt
pre_audit_crew/src/pre_audit_crew/config/: agents.yaml  tasks (another copy).yaml  tasks (copy).yaml  tasks.yaml
pre_audit_crew/src/pre_audit_crew/config (copy)/: agents.yaml  tasks.yaml
pre_audit_crew/src/pre_audit_crew/old-config/: agents.yaml  tasks.yaml
pre_audit_crew/src/pre_audit_crew/tools/: enhanced_tools.py
