[project]
name = "pre_audit_crew"
version = "0.1.0"
description = "pre-audit-crew using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.95.0,<1.0.0"
]

[project.scripts]
pre_audit_crew = "pre_audit_crew.main:run"
run_crew = "pre_audit_crew.main:run"
train = "pre_audit_crew.main:train"
replay = "pre_audit_crew.main:replay"
test = "pre_audit_crew.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
